<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tutorial5">

    <TextView
        android:id="@+id/tv_username_sathira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:text="@string/tv_username_sathira"
        app:layout_constraintEnd_toStartOf="@+id/et_username_sathira"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_password_sathira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/tv_password_sathira"
        app:layout_constraintEnd_toStartOf="@+id/et_password_sathira"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_sathira" />

    <EditText
        android:id="@+id/et_password_sathira"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_password_sathira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_password_sathira" />

    <Button
        android:id="@+id/btn_selectAll_sathira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="159dp"
        android:onClick="viewAll"
        android:text="@string/btn_selectAll_sathira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_sathira" />

    <Button
        android:id="@+id/btn_add_sathira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="48dp"
        android:onClick="saveUser"
        android:text="@string/btn_add_sathira"
        app:layout_constraintEnd_toStartOf="@+id/btn_signIn_sathira"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_selectAll_sathira" />

    <Button
        android:id="@+id/btn_signIn_sathira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="77dp"
        android:text="@string/btn_signIn_sathira"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_add_sathira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_add_sathira" />

    <Button
        android:id="@+id/btn_delete_sathira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="40dp"
        android:onClick="deleteUser"
        android:text="@string/btn_delete_sathira"
        app:layout_constraintEnd_toStartOf="@+id/btn_update_sathira"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_sathira" />

    <Button
        android:id="@+id/btn_update_sathira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="77dp"
        android:onClick="updateUser"
        android:text="@string/btn_update_sathira"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_delete_sathira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_delete_sathira" />

    <EditText
        android:id="@+id/et_username_sathira"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_username_sathira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_username_sathira" />
</androidx.constraintlayout.widget.ConstraintLayout>